# cyber-owl-llm-brain-module

./: README.md  check.sh  pyproject.toml
app/: main.py
app/config/: config.py
app/core/: client.py  httpd.py  llm.py  logger.py
app/tools/: math.py  time.py
app/utils/: basic_text_utils.py  levenstein_text_utils.py  number_to_words_ru.py  shuffle_bag.py  time_to_words.py
