[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbb-llm-agent"
version = "0.1.0"
description = "LLM Agent with tools, Ollama, and LangChain"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-ollama",
    "langchain",
    "wikipedia",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "black",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = []

[tool.ruff]
line-length = 88
target-version = "py39"

# Выбор правил: включаем рекомендуемые и типизацию
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

# Настройка isort
[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
files = ["app/"]
exclude = [
    ".*\\.pyi$",
    "venv",
    ".venv",
    "node_modules",
    "__pycache__",
]

# Подавление предупреждений для генерируемого кода
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -x --tb=short"